feat: gateway stateless para dados do CNES

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,8 @@ cneshub:
     baseUrl: https://opendatasus.saude.gov.br/api/3/action
     datasets:
       estabelecimentos: <RESOURCE_ID>
+  cache:
+    ttl: 5m
   security:
     apiKeyEnabled: false
     apiKey: trocar-em-producao
