--- a/pom.xml
+++ b/pom.xml
@@ -56,10 +56,28 @@
 	      <groupId>org.springframework.boot</groupId>
 	      <artifactId>spring-boot-starter-cache</artifactId>
 	    </dependency>
-	    <dependency>
-	      <groupId>com.github.ben-manes.caffeine</groupId>
-	      <artifactId>caffeine</artifactId>
-	    </dependency>
+            <dependency>
+              <groupId>com.github.ben-manes.caffeine</groupId>
+              <artifactId>caffeine</artifactId>
+            </dependency>
+
+            <!-- Resilience4j para tolerância a falhas -->
+            <dependency>
+              <groupId>io.github.resilience4j</groupId>
+              <artifactId>resilience4j-spring-boot3</artifactId>
+            </dependency>
+
+            <!-- Documentação OpenAPI/Swagger -->
+            <dependency>
+              <groupId>org.springdoc</groupId>
+              <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            </dependency>
+
+            <!-- Utilidades -->
+            <dependency>
+              <groupId>org.apache.commons</groupId>
+              <artifactId>commons-csv</artifactId>
+            </dependency>
 	
 	
 		<dependency>
