--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
             <dependency>
               <groupId>io.github.resilience4j</groupId>
               <artifactId>resilience4j-spring-boot3</artifactId>
+              <version>2.3.0</version>
             </dependency>
 
             <!-- Documentação OpenAPI/Swagger -->
