--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,10 @@ spring:
   main:
     web-application-type: servlet
 
+springdoc:
+  api-docs:
+    path: /v1/api-docs
+
 cneshub:
   ingest:
     baseUrl: https://opendatasus.saude.gov.br/api/3/action
