--- a/pom.xml
+++ b/pom.xml
@@ -69,11 +69,11 @@
           <version>${resilience4j.version}</version>
         </dependency>
 
-        <!-- Documentação Swagger 2 -->
+        <!-- Documentação OpenAPI -->
         <dependency>
-          <groupId>io.springfox</groupId>
-          <artifactId>springfox-boot-starter</artifactId>
-          <version>3.0.0</version>
+          <groupId>org.springdoc</groupId>
+          <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+          <version>2.6.0</version>
         </dependency>
 
         <!-- Utilidades -->
